--- a/code/API_definitions/device-status.yaml
+++ b/code/API_definitions/device-status.yaml
@@ -310,38 +310,43 @@ components:
     ActiveRoaming:
       description: Roaming status. True, if it is roaming
       type: boolean
-    UeId:
+    Device:
       description: User equipment identifier
       type: object
       properties:
-        externalId:
-          $ref: '#/components/schemas/ExternalId'
-        msisdn:
-          $ref: '#/components/schemas/MSISDN'
-        ipv4Addr:
-          $ref: '#/components/schemas/Ipv4Addr'
-        ipv6Addr:
-          $ref: '#/components/schemas/Ipv6Addr'
+        networkAccessIdentifier:
+          $ref: '#/components/schemas/NetworkAccessIdentifier'
+        phoneNumber:
+          $ref: '#/components/schemas/PhoneNumber'
+        ipv4Address:
+          $ref: '#/components/schemas/Ipv4Address'
+        ipv6Address:
+          $ref: '#/components/schemas/Ipv6Address'
       minProperties: 1
-    ExternalId:
+    NetworkAccessIdentifier:
       type: string
       example: '123456789@domain.com'
-    MSISDN:
+    PhoneNumber:
       type: string
       pattern: '^\+?[0-9]{5,15}$'
       example: '123456789'
       description: Subscriber number in E.164 format (starting with country code). Optionally prefixed with '+'.
-    Ipv4Addr:
-      type: string
-      format: ipv4
-      pattern: '^([01]?\d\d?|2[0-4]\d|25[0-5])(?:\.(?:[01]?\d\d?|2[0-4]\d|25[0-5])){3}(\/([0-9]|[1-2][0-9]|3[0-2]))?$'
-      example: '192.168.0.1/24'
-      description: |
-        IPv4 address may be specified in form <address/mask> as:
-          - address - an IPv4 number in dotted-quad form 1.2.3.4. Only this exact IP number will match the flow control rule.
-          - address/mask - an IP number as above with a mask width of the form 1.2.3.4/24.
-            In this case, all IP numbers from 1.2.3.0 to 1.2.3.255 will match. The bit width MUST be valid for the IP version.
-    Ipv6Addr:
+    Ipv4Address:
+      type: object
+      properties:
+        publicAddress: 
+          type: string
+          format: ipv4
+          pattern: '^([01]?\d\d?|2[0-4]\d|25[0-5])(?:\.(?:[01]?\d\d?|2[0-4]\d|25[0-5])){3}(\/([0-9]|[1-2][0-9]|3[0-2]))?$'
+          example: '192.168.0.1/24'
+          description: |
+           IPv4 address may be specified in form <address/mask> as:
+              - address - an IPv4 number in dotted-quad form 1.2.3.4. Only this exact IP number will match the flow control rule.
+              - address/mask - an IP number as above with a mask width of the form 1.2.3.4/24.
+              In this case, all IP numbers from 1.2.3.0 to 1.2.3.255 will match. The bit width MUST be valid for the IP version.
+        publicPort:
+          $ref: '#/components/schemas/Port'  
+    Ipv6Address:
       type: string
       format: ipv6
       allOf:
@@ -367,12 +372,10 @@ components:
     RequestRoamingStatus:
       type: object
       properties:
-        ueId:
-          $ref: '#/components/schemas/UeId'
-        uePort:
-          $ref: '#/components/schemas/Port'
+        device:
+          $ref: '#/components/schemas/Device'
       required:
-        - ueId
+        - device
     Port:
       description: User equipment port. Device port may be required along with IP address to identify the target device
       type: integer
@@ -438,10 +441,8 @@ components:
       description: The detail of the requested description
       type: object
       properties:
-        ueId:
-          $ref: '#/components/schemas/UeId'
-        uePort:
-          $ref: '#/components/schemas/Port'
+        device:
+          $ref: '#/components/schemas/Device'
         eventType:
           $ref: '#/components/schemas/RoamingEventType'
     RoamingEventType:
@@ -463,11 +464,6 @@ components:
       allOf:
         - $ref: '#/components/schemas/CreateSubscription'
         - type: object
-    UeIdList:
-      description: List of User equipment identifiers
-      type: array
-      items:
-        $ref: '#/components/schemas/UeId'
     SubscriptionInfo:
       description: Represents a device status subscription.
       type: object
@@ -569,13 +565,11 @@ components:
       description: Event detail structure for ROAMING_STATUS event
       type : object
       required:
-        - ueId
+        - device
         - roaming
       properties:
-        ueId:
-          $ref: '#/components/schemas/UeId'
-        uePort:
-          $ref: '#/components/schemas/Port'
+        device:
+          $ref: '#/components/schemas/Device'
         roaming:
           type: boolean
           description:  Roaming status. True, if it is roaming.
@@ -587,22 +581,18 @@ components:
       description: Event detail structure for ROAMING_ON & ROAMING_OFF event
       type : object
       required:
-        - ueId
+        - device
       properties:
-        ueId:
-          $ref: '#/components/schemas/UeId'
-        uePort:
-          $ref: '#/components/schemas/Port'
+        device:
+          $ref: '#/components/schemas/Device'
     ROAMING_CHANGE_COUNTRY:
       description: Event detail structure for ROAMING_CHANGE_COUNTRY event
       type : object
       required:
-        - ueId
+        - device
       properties:
-        ueId:
-          $ref: '#/components/schemas/UeId'
-        uePort:
-          $ref: '#/components/schemas/Port'
+        device:
+          $ref: '#/components/schemas/Device'
         countryCode:
           $ref: '#/components/schemas/CountryCode'
         countryName:
@@ -684,8 +674,8 @@ components:
           eventType: ROAMING_STATUS
           eventTime: 2023-01-17T13:18:23.682Z
           eventDetail:
-            ueId:
-              msisdn: 123456789
+            device:
+              phoneNumber: 123456789
             roaming: true
             countryCode: 208
             countryName: 
@@ -697,8 +687,8 @@ components:
           eventType: ROAMING_OFF
           eventTime: 2023-01-17T13:18:23.682Z
           eventDetail:
-            ueId:
-              msisdn: 123456789
+            device:
+              phoneNumber: 123456789
     ROAMING_ON:
       value:
         subscriptionId: 123655
@@ -706,8 +696,8 @@ components:
           eventType: ROAMING_ON
           eventTime: 2023-01-17T13:18:23.682Z
           eventDetail:
-            ueId:
-              msisdn: 123456789
+            device:
+              phoneNumber: 123456789
     ROAMING_CHANGE_COUNTRY:
       value:
         subscriptionId: 123655
@@ -715,8 +705,8 @@ components:
           eventType: ROAMING_CHANGE_COUNTRY
           eventTime: 2023-01-17T13:18:23.682Z
           eventDetail:
-            ueId:
-              msisdn: 123456789
+            device:
+              phoneNumber: 123456789
             countryCode: 214
             countryName: 
               SP 
