--- a/code/API_definitions/device-status.yaml
+++ b/code/API_definitions/device-status.yaml
@@ -31,13 +31,16 @@ servers:
         description: Base path for the device status API
 tags:
   - name: Device roaming status
-    description: Operations to get device roaming status and country information on the fly
-  - name: Device roaming status subscription
-    description: Operation to manage subscription on device status roaming event
+    description: Operation to get device roaming status and country information (if roaming) synchronously
   - name: Device status subscription
     description: Operation to manage subscription on device status event (roaming, connectivity)
   - name: Notification Callback
-    description: Notification received on subscription listener side
+    description: |
+      Notification received on subscription listener side. 
+      
+      **WARNING**: This endpoint must be exposed on the listener side as POST /notifications 
+      will be posted by the Roaming resource server to the url provided by notification 
+      listener.
 paths:
   /notifications:
     post:
@@ -63,6 +66,20 @@ paths:
       responses:
         '204':
           description: No Content
+        400:
+          $ref: "#/components/responses/Generic400"
+        401:
+          $ref: "#/components/responses/Generic401"
+        403:
+          $ref: "#/components/responses/Generic403"
+        500:
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorInfo"
+        503:
+          $ref: "#/components/responses/Generic503"
   /roaming:
     post:
       tags:
@@ -110,17 +127,17 @@ paths:
           $ref: "#/components/responses/Generic500"
         '503':
           $ref: "#/components/responses/Generic503"
-  /roaming/event-subscription:
+  /event-subscriptions:
     post:
       tags:
-        - Device roaming status subscription
-      summary: 'Create a device roaming status subscription for a device'
-      operationId: createRoamingSubscription
+        - Device status subscription
+      summary: 'Create a device status subscription for a device'
+      operationId: createDevicStatusSubscription
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateRoamingSubscription'
+              $ref: '#/components/schemas/CreateNotificationSubscription'
         required: true
       responses:
         '201':
@@ -141,7 +158,6 @@ paths:
           $ref: '#/components/responses/Generic500'
         '503':
           $ref: '#/components/responses/Generic503'
-  /roaming/event-subscriptions:
     get:
       tags:
         - Device status subscription
@@ -162,13 +178,11 @@ paths:
           $ref: '#/components/responses/Generic401'
         '403':
           $ref: '#/components/responses/Generic403'
-        '409':
-          $ref: '#/components/responses/Generic409'
         '500':
           $ref: '#/components/responses/Generic500'
         '503':
           $ref: '#/components/responses/Generic503' 
-  /roaming/event-subscriptions/{subscriptionId}:
+  /event-subscriptions/{subscriptionId}:
     get:
       tags:
         - Device status subscription
@@ -307,45 +321,87 @@ components:
           $ref: '#/components/schemas/CountryCode'
         countryName:
           $ref: '#/components/schemas/CountryName'
+    
     ActiveRoaming:
       description: Roaming status. True, if it is roaming
       type: boolean
+    
     Device:
-      description: User equipment identifier
+      description: |
+        End-user equipment able to connect to a mobile network. Examples of devices include smartphones or IoT sensors/actuators. 
+
+        The developer can choose to provide the below specified device identifiers:
+
+        * `ipv4Address`
+        * `ipv6Address`
+        * `phoneNumber`
+        * `networkAccessIdentifier`  
+
+        NOTE: the MNO might support only a subset of these options. The API invoker can provide multiple identifiers to be compatible across different MNOs. In this case the identifiers MUST belong to the same device     
       type: object
       properties:
-        networkAccessIdentifier:
-          $ref: '#/components/schemas/NetworkAccessIdentifier'
         phoneNumber:
-          $ref: '#/components/schemas/PhoneNumber'
+          $ref: "#/components/schemas/PhoneNumber"
+        networkAccessIdentifier:
+          $ref: "#/components/schemas/NetworkAccessIdentifier"
         ipv4Address:
-          $ref: '#/components/schemas/Ipv4Address'
+          $ref: "#/components/schemas/DeviceIpv4Addr"
         ipv6Address:
-          $ref: '#/components/schemas/Ipv6Address'
+          $ref: "#/components/schemas/Ipv6Address"
       minProperties: 1
     NetworkAccessIdentifier:
       type: string
       example: '123456789@domain.com'
+      description: A public identifier addressing a subscription in a mobile network. In 3GPP terminology, it corresponds to the GPSI formatted with the External Identifier ({Local Identifier}@{Domain Identifier}). Unlike the telephone number, the network access identifier is not subjected to portability ruling in force, and is individually managed by each operator.
+    
     PhoneNumber:
       type: string
       pattern: '^\+?[0-9]{5,15}$'
       example: '123456789'
-      description: Subscriber number in E.164 format (starting with country code). Optionally prefixed with '+'.
-    Ipv4Address:
+      description: A public identifier addressing a telephone subscription. In mobile networks it corresponds to the MSISDN (Mobile Station International Subscriber Directory Number). In order to be globally unique it has to be formatted in international format, according to E.164 standard, optionally prefixed with '+'.    
+    
+    DeviceIpv4Addr:
       type: object
+      description: |
+        The device should be identified by either the public (observed) IP address and port as seen by the application server, or the private (local) and any public (observed) IP addresses in use by the device (this information can be obtained by various means, for example from some DNS servers).
+        
+        If the allocated and observed IP addresses are the same (i.e. NAT is not in use) then  the same address should be specified for both publicAddress and privateAddress.
+        
+        If NAT64 is in use, the device should be identified by its publicAddress and publicPort, or separately by its allocated IPv6 address (field ipv6Address of the Device object)
+      
+        In all cases, publicAddress must be specified, along with at least one of either privateAddress or publicPort, dependent upon which is known. In general, mobile devices cannot be identified by their public IPv4 address alone.
       properties:
-        publicAddress: 
-          type: string
-          format: ipv4
-          pattern: '^([01]?\d\d?|2[0-4]\d|25[0-5])(?:\.(?:[01]?\d\d?|2[0-4]\d|25[0-5])){3}(\/([0-9]|[1-2][0-9]|3[0-2]))?$'
-          example: '192.168.0.1/24'
-          description: |
-           IPv4 address may be specified in form <address/mask> as:
-              - address - an IPv4 number in dotted-quad form 1.2.3.4. Only this exact IP number will match the flow control rule.
-              - address/mask - an IP number as above with a mask width of the form 1.2.3.4/24.
-              In this case, all IP numbers from 1.2.3.0 to 1.2.3.255 will match. The bit width MUST be valid for the IP version.
+        publicAddress:
+          $ref: "#/components/schemas/SingleIpv4Addr"
+        privateAddress:
+          $ref: "#/components/schemas/SingleIpv4Addr"
         publicPort:
-          $ref: '#/components/schemas/Port'  
+          $ref: "#/components/schemas/Port"
+      anyOf:
+        - required: [publicAddress, privateAddress]
+        - required: [publicAddress, publicPort]
+      example:
+            {
+              "publicAddress": "84.125.93.10",
+              "publicPort" : 59765
+            }
+
+    SingleIpv4Addr:
+      description: A single IPv4 address with no subnet mask
+      type: string
+      pattern: '^(([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])$'
+      example: "84.125.93.10"
+
+    Ipv4Address:
+      type: string
+      pattern: '^([01]?\d\d?|2[0-4]\d|25[0-5])(?:\.(?:[01]?\d\d?|2[0-4]\d|25[0-5])){3}(\/([0-9]|[1-2][0-9]|3[0-2]))?$'
+      example: "192.168.0.1/24"
+      description: |
+        IPv4 address may be specified in form <address/mask> as:
+          - address - an IPv4 number in dotted-quad form 1.2.3.4. Only this exact IP number will match the flow control rule.
+          - address/mask - an IP number as above with a mask width of the form 1.2.3.4/24.
+            In this case, all IP numbers from 1.2.3.0 to 1.2.3.255 will match. The bit width MUST be valid for the IP version.
+  
     Ipv6Address:
       type: string
       format: ipv6
@@ -365,7 +421,7 @@ components:
       description: The Mobile country code (MCC) as an geographic region identifier for the country and the dependent areas.
       type: integer
     CountryName:
-      description: The ISO 3166 ALPHA-2 country-codes of mapped to mobile country code(MCC). If there is mapping of one MCC to multiple countries, then we have list of countries. If there is no mapping of MCC to any country, then ["xx"] will be used.
+      description: The ISO 3166 ALPHA-2 country-codes of mapped to mobile country code(MCC). If there is mapping of one MCC to multiple countries, then we have list of countries. If there is no mapping of MCC to any country, then an empty array [] shall be returned..
       type: array
       items:
         type: string
@@ -411,10 +467,12 @@ components:
       type: array
       items:
         $ref: '#/components/schemas/DeviceStatusEventType'
-      example: [ ROAMING_STATUS]
+      example: [ROAMING_STATUS]
     CreateSubscription:
       description: The request for creating a Device Status Subscription
       type: object
+      required:
+        - webhook
       properties:
         subscriptionDetail:
           $ref: '#/components/schemas/SubscriptionDetail'
@@ -428,6 +486,8 @@ components:
     Webhook:
       description: Webhook information for event channel
       type: object
+      required:
+        - notificationUrl
       properties: 
         notificationUrl:
           type: string
@@ -440,6 +500,8 @@ components:
     SubscriptionDetail:
       description: The detail of the requested description
       type: object
+      required:
+        - eventType
       properties:
         device:
           $ref: '#/components/schemas/Device'
@@ -460,7 +522,7 @@ components:
         - ROAMING_ON
         - ROAMING_OFF
         - ROAMING_CHANGE_COUNTRY
-    CreateRoamingSubscription:
+    CreateNotificationSubscription:
       allOf:
         - $ref: '#/components/schemas/CreateSubscription'
         - type: object
@@ -495,8 +557,7 @@ components:
       description: The notification callback.
       type: object
       required:
-        - eventType
-        - eventTime
+        - event
       properties:
         subscriptionId:
           $ref: '#/components/schemas/SubscriptionId'
