--- a/code/API_definitions/device-status.yaml
+++ b/code/API_definitions/device-status.yaml
@@ -13,13 +13,13 @@ externalDocs:
   description: Product documentation at CAMARA
   url: https://github.com/camaraproject/
 security:
-#  - {}
+  #  - {}
   - oAuth2ClientCredentials: []
-#  - BasicAuth: []
-#  - apiKey: []
+  #  - BasicAuth: []
+  #  - apiKey: []
   - three_legged:
-    - device-status-roaming-read
-    - device-status-roaming-event
+      - device-status-roaming-read
+      - device-status-roaming-event
 servers:
   - url: '{apiRoot}/{basePath}'
     variables:
@@ -56,9 +56,9 @@ paths:
               $ref: "#/components/schemas/Notification"
             examples:
               ROAMING_STATUS:
-                $ref: '#/components/examples/ROAMING_STATUS'  
+                $ref: '#/components/examples/ROAMING_STATUS'
               ROAMING_CHANGE_COUNTRY:
-                $ref: '#/components/examples/ROAMING_CHANGE_COUNTRY' 
+                $ref: '#/components/examples/ROAMING_CHANGE_COUNTRY'
               ROAMING_ON:
                 $ref: '#/components/examples/ROAMING_ON'
               ROAMING_OFF:
@@ -137,11 +137,11 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateNotificationSubscription'
+              $ref: '#/components/schemas/CreateSubscription'
         required: true
       responses:
         '201':
-          description: Created 
+          description: Created
           content:
             application/json:
               schema:
@@ -169,7 +169,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array 
+                type: array
                 items:
                   $ref: '#/components/schemas/SubscriptionInfo'
         '400':
@@ -181,7 +181,7 @@ paths:
         '500':
           $ref: '#/components/responses/Generic500'
         '503':
-          $ref: '#/components/responses/Generic503' 
+          $ref: '#/components/responses/Generic503'
   /event-subscriptions/{subscriptionId}:
     get:
       tags:
@@ -212,13 +212,13 @@ paths:
               examples:
                 Generic400:
                   summary: Schema validation failed
-                  value: 
+                  value:
                     code: INVALID_INPUT
                     status: 400
                     message: "Schema validation failed at  ..."
                 subscriptionIdRequired:
                   summary: subscription id is required
-                  value: 
+                  value:
                     code: INVALID_INPUT
                     status: 400
                     message: "Expected property is missing: subscriptionId"
@@ -261,13 +261,13 @@ paths:
               examples:
                 Generic400:
                   summary: Schema validation failed
-                  value: 
+                  value:
                     code: INVALID_INPUT
                     status: 400
                     message: "Schema validation failed at  ..."
                 subscriptionIdRequired:
                   summary: subscription id is required
-                  value: 
+                  value:
                     code: INVALID_INPUT
                     status: 400
                     message: "Expected property is missing: subscriptionId"
@@ -293,14 +293,14 @@ components:
         clientCredentials:
           tokenUrl: '{tokenUrl}'
           scopes: {}
-#    BasicAuth:
-#      type: http
-#      scheme: basic
-#    apiKey:
-#      type: apiKey
-#      description: API key to authorize requests
-#      name: apikey
-#      in: query
+    #    BasicAuth:
+    #      type: http
+    #      scheme: basic
+    #    apiKey:
+    #      type: apiKey
+    #      description: API key to authorize requests
+    #      name: apikey
+    #      in: query
     three_legged:
       type: oauth2
       flows:
@@ -321,11 +321,11 @@ components:
           $ref: '#/components/schemas/CountryCode'
         countryName:
           $ref: '#/components/schemas/CountryName'
-    
+
     ActiveRoaming:
       description: Roaming status. True, if it is roaming
       type: boolean
-    
+
     Device:
       description: |
         End-user equipment able to connect to a mobile network. Examples of devices include smartphones or IoT sensors/actuators. 
@@ -337,7 +337,7 @@ components:
         * `phoneNumber`
         * `networkAccessIdentifier`  
 
-        NOTE: the MNO might support only a subset of these options. The API invoker can provide multiple identifiers to be compatible across different MNOs. In this case the identifiers MUST belong to the same device     
+        NOTE: the MNO might support only a subset of these options. The API invoker can provide multiple identifiers to be compatible across different MNOs. In this case the identifiers MUST belong to the same device
       type: object
       properties:
         phoneNumber:
@@ -353,13 +353,13 @@ components:
       type: string
       example: '123456789@domain.com'
       description: A public identifier addressing a subscription in a mobile network. In 3GPP terminology, it corresponds to the GPSI formatted with the External Identifier ({Local Identifier}@{Domain Identifier}). Unlike the telephone number, the network access identifier is not subjected to portability ruling in force, and is individually managed by each operator.
-    
+
     PhoneNumber:
       type: string
       pattern: '^\+?[0-9]{5,15}$'
       example: '123456789'
-      description: A public identifier addressing a telephone subscription. In mobile networks it corresponds to the MSISDN (Mobile Station International Subscriber Directory Number). In order to be globally unique it has to be formatted in international format, according to E.164 standard, optionally prefixed with '+'.    
-    
+      description: A public identifier addressing a telephone subscription. In mobile networks it corresponds to the MSISDN (Mobile Station International Subscriber Directory Number). In order to be globally unique it has to be formatted in international format, according to E.164 standard, optionally prefixed with '+'.
+
     DeviceIpv4Addr:
       type: object
       description: |
@@ -368,7 +368,7 @@ components:
         If the allocated and observed IP addresses are the same (i.e. NAT is not in use) then  the same address should be specified for both publicAddress and privateAddress.
         
         If NAT64 is in use, the device should be identified by its publicAddress and publicPort, or separately by its allocated IPv6 address (field ipv6Address of the Device object)
-      
+        
         In all cases, publicAddress must be specified, along with at least one of either privateAddress or publicPort, dependent upon which is known. In general, mobile devices cannot be identified by their public IPv4 address alone.
       properties:
         publicAddress:
@@ -381,10 +381,10 @@ components:
         - required: [publicAddress, privateAddress]
         - required: [publicAddress, publicPort]
       example:
-            {
-              "publicAddress": "84.125.93.10",
-              "publicPort" : 59765
-            }
+        {
+          "publicAddress": "84.125.93.10",
+          "publicPort" : 59765
+        }
 
     SingleIpv4Addr:
       description: A single IPv4 address with no subnet mask
@@ -392,23 +392,7 @@ components:
       pattern: '^(([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])$'
       example: "84.125.93.10"
 
-    Ipv4Address:
-      type: string
-      pattern: '^([01]?\d\d?|2[0-4]\d|25[0-5])(?:\.(?:[01]?\d\d?|2[0-4]\d|25[0-5])){3}(\/([0-9]|[1-2][0-9]|3[0-2]))?$'
-      example: "192.168.0.1/24"
-      description: |
-        IPv4 address may be specified in form <address/mask> as:
-          - address - an IPv4 number in dotted-quad form 1.2.3.4. Only this exact IP number will match the flow control rule.
-          - address/mask - an IP number as above with a mask width of the form 1.2.3.4/24.
-            In this case, all IP numbers from 1.2.3.0 to 1.2.3.255 will match. The bit width MUST be valid for the IP version.
-  
     Ipv6Address:
-      type: string
-      format: ipv6
-      allOf:
-        - pattern: '^((:|(0?|([1-9a-f][0-9a-f]{0,3}))):)((0?|([1-9a-f][0-9a-f]{0,3})):){0,6}(:|(0?|([1-9a-f][0-9a-f]{0,3})))(\/(([0-9])|([0-9]{2})|(1[0-1][0-9])|(12[0-8])))?$'
-        - pattern: '^((([^:]+:){7}([^:]+))|((([^:]+:)*[^:]+)?::(([^:]+:)*[^:]+)?))(\/.+)?$'
-      example: '2001:db8:85a3:8d3:1319:8a2e:370:7344'
       description: |
         IPv6 address, following IETF 5952 format, may be specified in form <address/mask> as:
           - address - The /128 subnet is optional for single addresses:
@@ -417,9 +401,17 @@ components:
           - address/mask - an IP v6 number with a mask:
             - 2001:db8:85a3:8d3::0/64
             - 2001:db8:85a3:8d3::/64
+      type: string
+      format: ipv6
+      allOf:
+        - pattern: '^((:|(0?|([1-9a-f][0-9a-f]{0,3}))):)((0?|([1-9a-f][0-9a-f]{0,3})):){0,6}(:|(0?|([1-9a-f][0-9a-f]{0,3})))(\/(([0-9])|([0-9]{2})|(1[0-1][0-9])|(12[0-8])))?$'
+        - pattern: '^((([^:]+:){7}([^:]+))|((([^:]+:)*[^:]+)?::(([^:]+:)*[^:]+)?))(\/.+)?$'
+      example: '2001:db8:85a3:8d3:1319:8a2e:370:7344'
+
     CountryCode:
       description: The Mobile country code (MCC) as an geographic region identifier for the country and the dependent areas.
       type: integer
+
     CountryName:
       description: The ISO 3166 ALPHA-2 country-codes of mapped to mobile country code(MCC). If there is mapping of one MCC to multiple countries, then we have list of countries. If there is no mapping of MCC to any country, then an empty array [] shall be returned..
       type: array
@@ -468,6 +460,7 @@ components:
       items:
         $ref: '#/components/schemas/DeviceStatusEventType'
       example: [ROAMING_STATUS]
+
     CreateSubscription:
       description: The request for creating a Device Status Subscription
       type: object
@@ -483,12 +476,13 @@ components:
           description: The subscription expiration time in date-time format.
         webhook:
           $ref: '#/components/schemas/Webhook'
+
     Webhook:
       description: Webhook information for event channel
       type: object
       required:
         - notificationUrl
-      properties: 
+      properties:
         notificationUrl:
           type: string
           example: "https://application-server.com"
@@ -496,7 +490,8 @@ components:
         notificationAuthToken:
           type: string
           example: "c8974e592c2fa383d4a3960714"
-          description: Authentification token for callback API  
+          description: Authentification token for callback API
+
     SubscriptionDetail:
       description: The detail of the requested description
       type: object
@@ -507,6 +502,7 @@ components:
           $ref: '#/components/schemas/Device'
         eventType:
           $ref: '#/components/schemas/RoamingEventType'
+
     RoamingEventType:
       type: string
       description: |
@@ -522,30 +518,28 @@ components:
         - ROAMING_ON
         - ROAMING_OFF
         - ROAMING_CHANGE_COUNTRY
-    CreateNotificationSubscription:
-      allOf:
-        - $ref: '#/components/schemas/CreateSubscription'
-        - type: object
+        -
+
     SubscriptionInfo:
       description: Represents a device status subscription.
       type: object
       allOf:
         - $ref: '#/components/schemas/CreateSubscription'
-        - type: object
-          properties:
-            subscriptionId:
-              $ref: '#/components/schemas/SubscriptionId'
-            startsAt:
-              type: string
-              format: date-time
-              description: date time when subscription started
-            expiresAt:
-              type: string
-              format: date-time
-              description: date time when subscription will expire or expired
-          required:
-            - subscriptionId
-            - type
+      properties:
+        subscriptionId:
+          $ref: '#/components/schemas/SubscriptionId'
+        startsAt:
+          type: string
+          format: date-time
+          description: date time when subscription started
+        expiresAt:
+          type: string
+          format: date-time
+          description: date time when subscription will expire or expired
+      required:
+        - subscriptionId
+        - type
+
     SubscriptionId:
       type: string
       description: The subscription identifier.
@@ -561,68 +555,82 @@ components:
       properties:
         subscriptionId:
           $ref: '#/components/schemas/SubscriptionId'
-        event: 
+        event:
           $ref: '#/components/schemas/Event'
-    Event: 
+
+    Event:
       description: Generic event structure
-      oneOf:
-        - $ref: '#/components/schemas/EventRoamingStatus'
-        - $ref: '#/components/schemas/EventRoamingChange'
-        - $ref: '#/components/schemas/EventChangeCountry'
+      required:
+        - eventType
+        - eventTime
+        - eventDetail
+      properties:
+        eventType:
+          type: string
+        eventTime:
+          $ref: '#/components/schemas/EventTime'
+        eventId:
+          type: string
+          format: uuid
+        eventDetail:
+          type: object
       discriminator:
         propertyName: 'eventType'
         mapping:
           ROAMING_STATUS: '#/components/schemas/EventRoamingStatus'
           ROAMING_CHANGE_COUNTRY : '#/components/schemas/EventChangeCountry'
-          ROAMING_OFF: '#/components/schemas/EventRoamingChange'
-          ROAMING_ON: '#/components/schemas/EventRoamingChange'
+          ROAMING_OFF: '#/components/schemas/EventRoamingOff'
+          ROAMING_ON: '#/components/schemas/EventRoamingOn'
+
     EventRoamingStatus:
       description:  event structure for roaming status change
-      required:
-        - eventType
-        - eventTime
-        - eventDetail
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/Event'
       properties:
-        eventType:
-          type: string
-          enum: 
-            - ROAMING_STATUS
-        eventTime:
-          $ref: '#/components/schemas/EventTime'
         eventDetail:
-          $ref: '#/components/schemas/ROAMING_STATUS'
-    EventRoamingChange:
+          $ref: '#/components/schemas/RoamingStatus'
+
+    EventRoamingOn:
       description:  event structure for roaming on and roaming off change
-      required:
-        - eventType
-        - eventTime
-        - eventDetail
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/Event'
       properties:
         eventType:
           type: string
-          enum: 
+          enum:
             - ROAMING_ON
-            - ROAMING_OFF
-        eventTime:
-          $ref: '#/components/schemas/EventTime'
         eventDetail:
-          $ref: '#/components/schemas/ROAMING_CHANGE'
+          $ref: '#/components/schemas/RoamingChange'
+
+    EventRoamingOff:
+      description:  event structure for roaming on and roaming off change
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/Event'
+      properties:
+        eventType:
+          type: string
+          enum:
+            - ROAMING_OFF
+        eventDetail:
+          $ref: '#/components/schemas/RoamingChange'
+
     EventChangeCountry:
       description:  event structure for roaming change country
-      required:
-        - eventType
-        - eventTime
-        - eventDetail
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/Event'
       properties:
         eventType:
           type: string
-          enum: 
+          enum:
             - ROAMING_CHANGE_COUNTRY
-        eventTime:
-          $ref: '#/components/schemas/EventTime'
         eventDetail:
-          $ref: '#/components/schemas/ROAMING_CHANGE_COUNTRY'  
-    ROAMING_STATUS:
+          $ref: '#/components/schemas/RoamingChangeCountry'
+
+    RoamingStatus:
       description: Event detail structure for ROAMING_STATUS event
       type : object
       required:
@@ -638,7 +646,8 @@ components:
           $ref: '#/components/schemas/CountryCode'
         countryName:
           $ref: '#/components/schemas/CountryName'
-    ROAMING_CHANGE:
+
+    RoamingChange:
       description: Event detail structure for ROAMING_ON & ROAMING_OFF event
       type : object
       required:
@@ -646,7 +655,8 @@ components:
       properties:
         device:
           $ref: '#/components/schemas/Device'
-    ROAMING_CHANGE_COUNTRY:
+
+    RoamingChangeCountry:
       description: Event detail structure for ROAMING_CHANGE_COUNTRY event
       type : object
       required:
@@ -658,6 +668,7 @@ components:
           $ref: '#/components/schemas/CountryCode'
         countryName:
           $ref: '#/components/schemas/CountryName'
+
   responses:
     Generic400:
       description: Problem with the client request
@@ -739,8 +750,7 @@ components:
               phoneNumber: 123456789
             roaming: true
             countryCode: 208
-            countryName: 
-              FR 
+            countryName: FR
     ROAMING_OFF:
       value:
         subscriptionId: 123655
@@ -769,5 +779,4 @@ components:
             device:
               phoneNumber: 123456789
             countryCode: 214
-            countryName: 
-              SP 
+            countryName: SP
